# midi-poly-latch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/core/: ChannelState.cpp  ChannelState.h  CommonTypes.cpp  CommonTypes.h  Consts.h  Engine.cpp  Engine.h  NoteIndex.cpp  NoteIndex.h  NoteList.cpp  NoteList.h  NoteState.cpp  NoteState.h  OmniActions.cpp  OmniActions.h  Parameters.cpp  Parameters.h  Rng.cpp  Rng.h  SpecialKeys.h  State.cpp  State.h  Stealing.cpp  Stealing.h  TimePosition.cpp  TimePosition.h
tests/: ChannelStateTests.cpp  CommonTypesTests.cpp  HelloWorld.cpp  NoteIndexTests.cpp  RngTests.cpp  StateTests.cpp
tests/support/: NoteIndexMatchers.cpp  NoteIndexMatchers.h
